--- a/resources/theme/element.css
+++ b/resources/theme/element.css
@@ -1362,6 +1362,8 @@ uqlibrary-flint /deep/ paper-icon-button {
   transition: all 280ms cubic-bezier(0.4, 0, 0.2, 1); }
   uqlibrary-flint /deep/ paper-icon-button:hover, uqlibrary-flint /deep/ paper-icon-button:focus, uqlibrary-flint /deep/ paper-icon-button:active {
     background-color: rgba(255, 255, 255, 0.12); }
+uqlibrary-flint /deep/ #playButton:hover {
+  background-color: #cccccc; }
 uqlibrary-flint /deep/ paper-input-decorator {
   transform: translate(1000px, 0);
   opacity: 0;
@@ -1463,9 +1465,6 @@ uqlibrary-flint /deep/ [drawer] {
 @media (min-width: 750px) {
   .flint-responsive-menu-toggle-icon {
     display: none; } }
-
-paper-icon-button::shadow {
-  padding: 0; }
 
 /deep/ .glow {
   cursor: pointer;
